--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,6 +23,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+      - name: Reduce html to necessary information (each file was self-contained)
+        run: |
+          python tools/externalize_explanations.py
       - name: Build manifest (if attributions exist)
         run: |
           python tools/build_manifest.py
