--- a/manifest.json
+++ b/manifest.json
@@ -407,6 +407,23 @@
       ]
     },
     {
+      "model": "clf:ag-news:roberta",
+      "task": "classification",
+      "type": "concept",
+      "scope": "general",
+      "sample": null,
+      "methods": [
+        "batch_top_k_sae.html",
+        "ica.html",
+        "mp_sae.html",
+        "neurons_as_concepts.html",
+        "pca.html",
+        "semi_nmf.html",
+        "svd.html",
+        "vanilla_sae.html"
+      ]
+    },
+    {
       "model": "clf:emotion:bert",
       "task": "classification",
       "type": "attribution",
@@ -784,6 +801,23 @@
         "sobol.html",
         "squared_grad.html",
         "vargrad.html"
+      ]
+    },
+    {
+      "model": "clf:emotion:bert",
+      "task": "classification",
+      "type": "concept",
+      "scope": "general",
+      "sample": null,
+      "methods": [
+        "batch_top_k_sae.html",
+        "ica.html",
+        "mp_sae.html",
+        "neurons_as_concepts.html",
+        "pca.html",
+        "semi_nmf.html",
+        "svd.html",
+        "vanilla_sae.html"
       ]
     },
     {
@@ -1175,7 +1209,12 @@
       "methods": [
         "batch_top_k_sae.html",
         "ica.html",
-        "mp_sae.html"
+        "mp_sae.html",
+        "neurons_as_concepts.html",
+        "pca.html",
+        "semi_nmf.html",
+        "svd.html",
+        "vanilla_sae.html"
       ]
     },
     {
