--- a/manifest.json
+++ b/manifest.json
@@ -1204,6 +1204,23 @@
       "model": "clf:imdb:distilbert",
       "task": "classification",
       "type": "concept",
+      "scope": "class-wise",
+      "sample": null,
+      "methods": [
+        "batch_top_k_sae.html",
+        "ica.html",
+        "mp_sae.html",
+        "neurons_as_concepts.html",
+        "pca.html",
+        "semi_nmf.html",
+        "svd.html",
+        "vanilla_sae.html"
+      ]
+    },
+    {
+      "model": "clf:imdb:distilbert",
+      "task": "classification",
+      "type": "concept",
       "scope": "general",
       "sample": null,
       "methods": [
